--- a/reveal/index.html
+++ b/reveal/index.html
@@ -39,12 +39,14 @@
 <div class="slides">
 <section data-markdown>
     <script type="text/template">
-# 2018Fall ag3 
-## 期末分組網際簡報
+## ag3期末分組網際簡報
 
-虎科大機械設計工程系
+ 將Tipue Search系統導入CMSimfly
 
-### [CMSimfly](https://mdecp2018.github.io/finalproject-ag3/content)
+
+
+
+Created by [ag3](https://mdecp2018.github.io/finalproject-ag3/content)
 
     </script>
 </section>
@@ -53,13 +55,17 @@
 						
 <section data-markdown>
     <script type="text/template">
-## 在 CMSfly 增加 search 功能
+## 目錄
 
-一開始 CMSfly 沒有search功能
+* 何為[Tipue Search](http://www.tipue.com/search/)
 
-為了讓瀏覽網站能快速找到要的東西
+* 載入JavaScript
 
-所以才決定在靜態網站裡增加search的功能
+* 建立搜尋列
+
+* 搜尋內容
+
+* 啟動Tipue Search
 
     </script>
 </section>
@@ -70,32 +76,9 @@
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
-# 從無到有
-* 如何新增一個search box
+# Tipue Search
 
-* 先去找資料
-
-* 我們在
-[Tipue](http://www.tipue.com/search/help/?d=1)
-那找到相關的資料
-
-    </script>
-</section>
-
-
-
-						
-<section data-markdown>
-    <script type="text/template">
-<!-- 請注意, @others 不可以內縮 -->
-# Tipue
-* 如何新增一個search box
-
-* 先去找資料
-
-* 我們在
-[Tipue](http://www.tipue.com/search/help/?d=1)
-那找到相關的資料
+<img src="../images/search box.JPG" width="300px"/>
 
     </script>
 </section>
