--- a/content/CMSimfly.html
+++ b/content/CMSimfly.html
@@ -84,14 +84,6 @@ $(document).ready(function() {
 <li><a href="./../blog/index.html">blog</a></li>
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><div class="tipue_search_group"><input style="width: 6vw;" type="text" name="q" id="tipue_search_input" pattern=".{3,}" title="Press enter key to search" required></div><li><a href='Introduction.html'>Introduction</a><li><a href='Topic.html'>Topic</a><li><a href='Synopsis.html'>Synopsis</a><ul><li><a href='CMSimfly.html'>CMSimfly</a><li><a href='Beautiful Soup.html'>Beautiful Soup</a><li><a href='TinyMCE4.html'>TinyMCE4</a></li></ul><li><a href='Report.html'>Report</a><li><a href='Final video.html'>Final video</a><li><a href='Python 語法.html'>Python 語法</a></li></ul></nav><section><div id="tipue_search_content">Report << <a href='Report.html'>Previous</a> <a href='Python 語法.html'>Next</a> >> Python 語法<br /><h1>Final video</h1>
-<p>李冠廷(40723112)</p>
-<p><iframe allowfullscreen="allowfullscreen" height="196" src="//www.youtube.com/embed/2ZJKL5jEu6Y" width="350"></iframe></p>
-<p>林靖浩(40723120)</p>
-<p>廖豪樹(40723144)</p>
-<p>劉光智(40723145)</p>
-<p><iframe allowfullscreen="allowfullscreen" height="202" src="//www.youtube.com/embed/4zjrrU7CCiA" width="360"></iframe></p>
-<p>蔡博宇(40723147)</p>
-<p><iframe allowfullscreen="allowfullscreen" height="196" src="//www.youtube.com/embed/rTx4FXr9tgg?feature=youtu" width="350"></iframe></p>
-<p>簡國龍(40723150)</p>
-<br />Report << <a href='Report.html'>Previous</a> <a href='Python 語法.html'>Next</a> >> Python 語法</div></section></div></body></html>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><div class="tipue_search_group"><input style="width: 6vw;" type="text" name="q" id="tipue_search_input" pattern=".{3,}" title="Press enter key to search" required></div><li><a href='Introduction.html'>Introduction</a><li><a href='Topic.html'>Topic</a><li><a href='Synopsis.html'>Synopsis</a><ul><li><a href='CMSimfly.html'>CMSimfly</a><li><a href='Beautiful Soup.html'>Beautiful Soup</a><li><a href='TinyMCE4.html'>TinyMCE4</a></li></ul><li><a href='Report.html'>Report</a><li><a href='Final video.html'>Final video</a><li><a href='Python 語法.html'>Python 語法</a></li></ul></nav><section><div id="tipue_search_content">Synopsis << <a href='Synopsis.html'>Previous</a> <a href='Beautiful Soup.html'>Next</a> >> Beautiful Soup<br /><h1>CMSimfly</h1>
+<p>CMSifly 是利用 Beatifulsoup4 對 config/content.html 進行分頁後，用 TinyMCE4 進行文字內容編輯，進行網際內容管理。 我們在近端內容管理系統裡面加入Tipuesearch 功能</p>
+<br />Synopsis << <a href='Synopsis.html'>Previous</a> <a href='Beautiful Soup.html'>Next</a> >> Beautiful Soup</div></section></div></body></html>
