--- a/content/Python 語法.html
+++ b/content/Python 語法.html
@@ -84,7 +84,7 @@ $(document).ready(function() {
 <li><a href="./../blog/index.html">blog</a></li>
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><div class="tipue_search_group"><input style="width: 6vw;" type="text" name="q" id="tipue_search_input" pattern=".{3,}" title="Press enter key to search" required></div><li><a href='Introduction.html'>Introduction</a><li><a href='Topic.html'>Topic</a><li><a href='Synopsis.html'>Synopsis</a><ul><li><a href='Beautiful soup.html'>Beautiful soup</a><li><a href='TinyMCE4.html'>TinyMCE4</a></li></ul><li><a href='Report.html'>Report</a><li><a href='Final video.html'>Final video</a><li><a href='Python 語法.html'>Python 語法</a></li></ul></nav><section><div id="tipue_search_content">Final video << <a href='Final video.html'>Previous</a> <br /><h1>Python 語法</h1>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><div class="tipue_search_group"><input style="width: 6vw;" type="text" name="q" id="tipue_search_input" pattern=".{3,}" title="Press enter key to search" required></div><li><a href='Introduction.html'>Introduction</a><li><a href='Topic.html'>Topic</a><li><a href='Synopsis.html'>Synopsis</a><ul><li><a href='CMSimfly.html'>CMSimfly</a><li><a href='Beautiful Soup.html'>Beautiful Soup</a><li><a href='TinyMCE4.html'>TinyMCE4</a></li></ul><li><a href='Report.html'>Report</a><li><a href='Final video.html'>Final video</a><li><a href='Python 語法.html'>Python 語法</a></li></ul></nav><section><div id="tipue_search_content">Final video << <a href='Final video.html'>Previous</a> <br /><h1>Python 語法</h1>
 <p>Python 3 官方教材: <a href="https://docs.python.org/3/index.html">https://docs.python.org/3/index.html</a> </p>
 <p>Python tutorial: <a href="https://docs.python.org/3/tutorial/index.html">https://docs.python.org/3/tutorial/index.html</a> (英文)</p>
 <p>Python 教學: <a href="https://python-doc-tw.github.io/tutorial/index.html">https://python-doc-tw.github.io/tutorial/index.html</a> </p>
@@ -273,4 +273,5 @@ doc["ex2"].bind('click', Ex2.prog)
 <p><!-- ***************************** slide ex2 end --></p>
 <p><!-- ***************************** slide ex3 start --></p>
 <p>
-<script type="text/python3"></script></p><br />Final video << <a href='Final video.html'>Previous</a> </div></section></div></body></html>
+<script type="text/python3"></script>
+</p><br />Final video << <a href='Final video.html'>Previous</a> </div></section></div></body></html>
