--- a/content/Topic.html
+++ b/content/Topic.html
@@ -84,11 +84,11 @@ $(document).ready(function() {
 <li><a href="./../blog/index.html">blog</a></li>
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><div class="tipue_search_group"><input style="width: 6vw;" type="text" name="q" id="tipue_search_input" pattern=".{3,}" title="Press enter key to search" required></div><li><a href='Introduction.html'>Introduction</a><li><a href='Topic.html'>Topic</a><li><a href='Synopsis.html'>Synopsis</a><ul><li><a href='Beautiful soup.html'>Beautiful soup</a><li><a href='TinyMCE4.html'>TinyMCE4</a></li></ul><li><a href='Report.html'>Report</a><li><a href='Final video.html'>Final video</a><li><a href='Python 語法.html'>Python 語法</a></li></ul></nav><section><div id="tipue_search_content">Introduction << <a href='Introduction.html'>Previous</a> <a href='Synopsis.html'>Next</a> >> Synopsis<br /><h1>Topic</h1>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><div class="tipue_search_group"><input style="width: 6vw;" type="text" name="q" id="tipue_search_input" pattern=".{3,}" title="Press enter key to search" required></div><li><a href='Introduction.html'>Introduction</a><li><a href='Topic.html'>Topic</a><li><a href='Synopsis.html'>Synopsis</a><ul><li><a href='CMSimfly.html'>CMSimfly</a><li><a href='Beautiful Soup.html'>Beautiful Soup</a><li><a href='TinyMCE4.html'>TinyMCE4</a></li></ul><li><a href='Report.html'>Report</a><li><a href='Final video.html'>Final video</a><li><a href='Python 語法.html'>Python 語法</a></li></ul></nav><section><div id="tipue_search_content">Introduction << <a href='Introduction.html'>Previous</a> <a href='Synopsis.html'>Next</a> >> Synopsis<br /><h1>Topic</h1>
 <p><span>CMSimfly上加入</span><a href="http://www.tipue.com/search/">tipue search</a><span>功能</span></p>
 <p><span><img alt="" height="115" src="./../images/th.jpg" width="205"/><img alt="" height="114" src="./../images/search.jpg" width="137"/></span></p>
 <p><span>如此一來便可以提升閱讀效率</span></p>
 <p><span>更可使閱讀更隨心所欲</span></p>
 <p><span><img alt="" height="133" src="./../images/shutterstock_101971000-S.jpg" width="199"/></span></p>
-<p><span></span></p>
+<p><span>參考資料：<a href="http://www.tipue.com/search/help/?d=1">Tipuesearch</a>、 <a href="https://www.quora.com/How-can-I-extract-only-text-data-from-HTML-pages">Quora</a></span></p>
 <br />Introduction << <a href='Introduction.html'>Previous</a> <a href='Synopsis.html'>Next</a> >> Synopsis</div></section></div></body></html>
